// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;
option go_package = "930_delegate_tasks";

import "google/protobuf/timestamp.proto";

import "930-delegate-tasks/src/main/proto/io/harness/perpetualtask/perpetual_task_execution.proto";
import "955-delegate-beans/src/main/proto/io/harness/delegate/delegate.proto";
import "955-delegate-beans/src/main/proto/io/harness/perpetualtask/perpetual_task.proto";

service PerpetualTaskService {
  rpc PerpetualTaskList(PerpetualTaskListRequest) returns (PerpetualTaskListResponse);
  rpc PerpetualTaskContext(PerpetualTaskContextRequest) returns (PerpetualTaskContextResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message PerpetualTaskListRequest {
  delegate.DelegateId delegate_id = 1;
}

message PerpetualTaskListResponse {
  repeated PerpetualTaskAssignDetails perpetual_task_assign_details = 1;
}

message PerpetualTaskContextRequest {
  PerpetualTaskId perpetual_task_id = 1;
}

message PerpetualTaskContextResponse {
  PerpetualTaskExecutionContext perpetual_task_context = 1;
}

message HeartbeatRequest {
  string id = 1;
  google.protobuf.Timestamp heartbeat_timestamp = 2;
  int32 response_code = 3;
  string response_message = 4;
}

message HeartbeatResponse {}
